--- a/scripts/mw2html_audacity/sidebar.html
+++ b/scripts/mw2html_audacity/sidebar.html
@@ -2,9 +2,10 @@
    <h5>Useful External Links</h5>
    <div class="pBody">
       <ul>
-         <li><a style="font-style:italic" href="http://forum.audacityteam.org" title="Visit the Forum for technical support">Forum</a></li>
-         <li><a style="font-style:italic" href="http://wiki.audacityteam.org" title="Visit the Wiki for tips, tricks and more tutorials">Wiki</a></li>
-         <li><a style="font-style:italic" href="http://audacityteam.org/download/" title="Download the latest release">Latest Release</a></li>  
+         <li><a style="font-style:italic" href="https://forum.audacityteam.org" title="Visit the Forum for technical support">Forum</a></li>
+         <li><a style="font-style:italic" href="https://wiki.audacityteam.org" title="Visit the Wiki for tips, tricks and more tutorials">Wiki</a></li>
+         <li><a style="font-style:italic" href="https://audacityteam.org/download/" title="Download the latest release">Latest Release</a></li>  
+         <li><a style="font-style:italic" href="https://wit.audacityteam.org/" title='"What is That?" Audacity help page'>WIT</a></li>  
       </ul>
    </div>
 </div>
